--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,13 @@
         <header></header>
         <nav class="navbar">
             <div class="search">
-                <form class="search-form" onsubmit="event.preventDefault()">
+                <form class="search-form" data-bind="submit: submitForm">
                     <input type="text" id="search-input" data-bind="value: query, valueUpdate: 'afterkeydown'" autocomplete="off">
-                    <button class="search-btn"><i class="material-icons">search</i></button>
-                    <button class="close-btn"><i class="material-icons">close</i></button>
+                    <input type="submit" class="search-btn material-icons" value="search">
+                    <input type="reset" class="close-btn material-icons" data-bind="click: clearSearch()" value="close">
                 </form>
                 <ul class="search-list" data-bind="foreach: filterLocations()">
-                    <li class="search-item" data-bind="text: generalInfo.name">Climbing Gym</li>
+                    <li class="search-item" data-bind="text: generalInfo.name, click: $parent.selectLocation">Climbing Gym</li>
                 </ul>
             </div>
         </nav>
