--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,15 @@
         <nav class="navbar">
             <div class="search">
                 <form class="search-form" data-bind="submit: submitForm">
-                    <input type="text" id="search-input" data-bind="textInput: query, hasFocus: searchFocused" autocomplete="off" placeholder="Search...">
+                    <input type="text" id="search-input" data-bind="textInput: query, hasFocus: searchFocused, click: inputClicked()" autocomplete="off" placeholder="Search...">
                     <input type="reset" class="close-btn material-icons" data-bind="click: clearSearch(), value: buttonClass" value="">
                 </form>
-                <ul class="search-list" data-bind="foreach: filterLocations(), style: { display: checkListVisible() }">
+                <ul class="search-list" data-bind="foreach: filterLocations(), visible: listVisible">
                     <li class="search-item" data-bind="text: generalInfo.name, click: $parent.listItemClicked, clickBubble: false">Climbing Gym</li>
                 </ul>
             </div>
         </nav>
-        <article id="map"></article>
+        <article id="map" data-bind="click: mapClicked()"></article>
         <footer></footer>
     </main>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
