--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <div class="search">
                 <form class="search-form" data-bind="submit: submitForm">
-                    <input type="text" id="search-input" data-bind="textInput: query, hasFocus: searchFocused, click: inputClicked()" autocomplete="off" placeholder="Search...">
+                    <input type="text" class="search-input" data-bind="textInput: query, hasFocus: searchFocused, click: inputClicked()" autocomplete="off" placeholder="Search...">
                     <input type="reset" class="close-btn material-icons" data-bind="click: clearSearch(), value: buttonClass" value="">
                 </form>
                 <div data-bind="template: 'listTmpl'"></div>
@@ -24,7 +24,7 @@
                 </script>
             </div>
         </nav>
-        <article id="map" data-bind="click: mapClicked()"></article>
+        <article id="map" class="map-canvas" data-bind="click: mapClicked()"></article>
     </main>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js" integrity="sha256-ly8TiTtwVsBWdjekTqTJlLGz3Rsg4YXr80eK6QhtdMs=" crossorigin="anonymous"></script>
