add uber attribution in footer

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
             </div>
         </nav>
         <article id="map" class="map-canvas" data-bind="click: mapClicked()"></article>
+        <footer><div class="plus">+</div><a href="https://developer.uber.com/"><img class="uber-attr" src="img/Uber_Logotype_Digital_black.png" alt=""></a></footer>
     </main>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js" integrity="sha256-ly8TiTtwVsBWdjekTqTJlLGz3Rsg4YXr80eK6QhtdMs=" crossorigin="anonymous"></script>
